# backend/openapi.json
@@ -3273,6 +3273,17 @@
               }
             ],
             "title": "Photo"
+          },
+          "event_preferences": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Event Preferences"
           }
         },
         "type": "object",
